--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ h1 {
   color: rgb(214, 4, 4);
 }
 body {
+  background-image: url(background.jpg);
     background-color: black;
     color: rgb(214, 4, 4);
 }
