--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ h1 {
 }
 body {
   background-image: url(background.jpg);
-    background-color: black;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
     color: rgb(214, 4, 4);
 }
