--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,35 @@ h1 {
   background-color: black;
   color: rgb(214, 4, 4);
 }
+.topNav {
+  display:flex;
+  justify-content: flex-end;
+  background-color: #c6c6cf;
+  overflow: hidden;
+  padding: 0px 45px;
+  align-items: center;
+}
+.top {
+  display: flex;
+  justify-content: space-between;
+}
 body {
-  background-image: url(background.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    color: rgb(214, 4, 4);
+  background-color: rgb(128, 134, 151);
+  margin: 0;
+  box-sizing: border-box;
 }
 h2 {
   font-size: 20px;
   border: 6px;
   background-color: black;
   color: rgb(214, 4, 4);
+}
+img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.text {
+  display:flex;
+
 }
