--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 h1 {
   font-size: 50px;
   border: 50px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
 }
 .topNav {
