--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,10 @@ h2 {
   color: rgb(214, 4, 4);
 }
 img {
-  width: 10%;
-  height: 600px;
+  width: 20%;
+  height: 700px;
   object-fit: cover;
+  margin-right: 10px;
 }
 .text {
   display:flex;
