--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ img {
   width: 20%;
   height: 700px;
   object-fit: cover;
-  margin-right: -10px;
+  margin-left: -10px;
 }
 .text {
   display:flex;
