--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,8 @@ img {
   width: 20%;
   height: 700px;
   object-fit: cover;
-  margin-left: -10px;
+  margin-left: 10px;
+  padding: 10px 0px 10px 0px;
 }
 .text {
   display:flex;
