--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ h1 {
 .topNav {
   display:flex;
   justify-content: flex-end;
+  justify-content: space-between;
   background-color: #c6c6cf;
   overflow: hidden;
   padding: 0px 45px;
@@ -32,7 +33,8 @@ img {
   width: 20%;
   height: 700px;
   object-fit: cover;
-  margin-left: 100px;
+ display: flex;
+ justify-content: flex-end;
   padding: 10px 0px 10px 0px;
 }
 .text {
