--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ img {
   height: 700px;
   object-fit: cover;
  display: flex;
- justify-content: flex-end;
+ justify-content: flex-start;
   padding: 10px 0px 10px 0px;
 }
 .text {
