--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,9 @@ img {
   width: 20%;
   height: 700px;
   object-fit: cover;
-
+display: block;
  justify-content: start;
-  padding: 10px 20px 10px 20px;
+  padding: 10px 15px 10px 15px;
 }
 .text {
   display:flex;
