--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ img {
   width: 20%;
   height: 700px;
   object-fit: cover;
-display: block;
- justify-content: start;
+  display: flex;
+  justify-content: end;
   padding: 10px 15px 10px 15px;
 }
 .text {
