--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ img {
   justify-content: end;
   padding: 10px 15px 10px 15px;
 }
-.text {
+.main {
   display:flex;
   flex-direction: row;
   text-align: left;
