--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,8 @@
   justify-content: flex-end;
   justify-content: space-between;
   align-items: center;
-  background-color: #c6c6cf;
+  background-color: #ffffff;
   overflow: hidden;
-  padding: 0px 45px;
   align-items: center;
   font-size: 20px;
   margin: 5px;
