--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
+  
+  padding: 0px 45px;
   overflow: hidden;
   align-items: center;
   font-size: 20px;
@@ -16,12 +18,7 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-h2 {
-  font-size: 20px;
-  border: 6px;
-  background-color: black;
-  color: rgb(214, 4, 4);
-}
+
 img {
   width: 28%;
   height: 90%;
@@ -64,4 +61,5 @@ h5 {
   left: 70px;
   bottom: 200px;
   float: right;
+  position: relative;
 }
