--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
-  
+  top: 0px;
   padding: 0px 45px;
   overflow: hidden;
   align-items: center;
@@ -59,4 +59,5 @@ h5 {
   flex-direction: column;
   text-align: right;
   position: relative;
+  width: 28%;
 }
