--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
-  top: 0px;
+
   padding: 0px 45px;
   overflow: hidden;
   align-items: center;
@@ -58,6 +58,6 @@ h5 {
   display: flex;
   flex-direction: column;
   text-align: right;
-  position: relative;
-  width: 28%;
+  position: absolute;
+
 }
