--- a/styles.css
+++ b/styles.css
@@ -12,20 +12,24 @@
   font-size: 20px;
   margin: 5px;
 }
+h1 {
+  font-size: 120px;
+}
 
 body {
-  background-color: rgb(242, 243, 245);
+  background-color: rgb(227, 229, 233);
   margin: 0;
   box-sizing: border-box;
 }
 
 img {
-  width: 28%;
-  height: 90%;
+  width: 280px;
+  height: 480px;
   object-fit: cover;
   display: flex;
   float: right;
   padding: 10px 15px 10px 15px;
+  object-fit: cover;
 }
 .main {
   display:flex;
@@ -54,12 +58,8 @@ h5 {
   background-color: rgb(23, 155, 19);
   padding: 20px 10px 20px 10px;
 }
-.box1 {
-  display: flex;
-  flex-direction: column;
-  text-align: right;
-  position: relative;
-  width: 28%;
-  height: 90%;
 
+
+.img:hover {
+  transform: scale(1,5);
 }
