--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,9 @@ img {
   width: 280px;
   height: 480px;
   
+  object-fit: cover;
   display: flex;
-  float: right;
+
   padding: 10px 15px 10px 15px;
   transition: .2s;
 }
