--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ img {
   
   object-fit: cover;
   display: flex;
-flex-direction: row;
+flex-direction: row-reverse;
   padding: 10px 15px 10px 15px;
   transition: .2s;
 }
