--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,14 @@
   margin: 5px;
 }
 h1 {
-  font-size: 90px;
+  font-size: 80px;
 }
 
 body {
   background-color: rgb(227, 229, 233);
   margin: 0;
   box-sizing: border-box;
+  padding: 0;
 }
 
 img {
