--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ flex-direction: row-reverse;
   transition: .2s;
 }
 .main {
-  
+  display: flex;
 
   text-align: right;
 }
@@ -83,4 +83,41 @@ h5 {
 
 .img:hover {
   transform: scale(1,1.5);
+}
+.topNav, .top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #cfcfcf;
+  padding: 10px 45px;
+  overflow: hidden;
+  font-size: 20px;
+}
+
+.img {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.img-group {
+  text-align: center;
+}
+
+.img-group img {
+  width: 280px;
+  height: 480px;
+  object-fit: cover;
+  display: block;
+  margin-bottom: 10px;
+  transition: .2s;
+}
+
+h4, h5 {
+  margin: 0;
+}
+
+.h5 {
+  background-color: #3baf1e;
+  padding: 10px;
 }
