--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ h5 {
 
 
 .img:hover {
-  transform: scale(1,1.5);
+  transform: scale(1, 1.2);
 }
 .topNav, .top {
   display: flex;
@@ -102,6 +102,7 @@ h5 {
 
 .img-group {
   text-align: center;
+  position: relative;
 }
 
 .img-group img {
@@ -120,4 +121,23 @@ h4, h5 {
 .h5 {
   background-color: #3baf1e;
   padding: 10px;
+}
+.caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+.caption h4, .caption h5 {
+  margin: 0;
+}
+
+.caption h5 {
+  background-color: #3baf1e;
+  padding: 10px;
+  color: white;
 }
