--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,13 @@
 
 }
 h1 {
-  font-size: 80px;
+  font-size: 70px;
+  margin-bottom: 10px;
+}
+.all {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
 }
 
 body {
@@ -55,7 +61,7 @@ flex-direction: row-reverse;
 .main {
   display: flex;
 
-  text-align: right;
+  text-align: left;
 }
 .home {
   color: black;
@@ -64,6 +70,7 @@ flex-direction: row-reverse;
 p {
   width: 230px;
   padding-right: 10px;
+  margin-bottom: 10px;
 }
 .all {
   display:flex;
@@ -113,7 +120,9 @@ h5 {
   margin-bottom: 10px;
   transition: .2s;
 }
-
+h3 {
+  margin-bottom: 20px;
+}
 h4, h5 {
   margin: 0;
 }
