--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .topNav .home {
   display: flex;
   align-content: center;
@@ -20,14 +21,14 @@
 }
 .topNav, .top {
   display:flex;
-  justify-content: flex-end;
+  
   justify-content: space-between;
   align-items: center;
   background-color: #cfcfcf;
 
   padding: 10px 45px;
   overflow: hidden;
-  align-items: center;
+
   font-size: 20px;
 
 }
@@ -36,7 +37,7 @@ h1, h2 {
   padding: 0;
 }
 h2 {
-  margin-top: 10px;
+  margin-top: -60px;
 }
 .all {
   display: flex;
@@ -51,16 +52,8 @@ body {
   padding: 0;
 }
 
-img {
-  width: 280px;
-  height: 480px;
-  
-  object-fit: cover;
-  display: flex;
-flex-direction: row-reverse;
-  padding: 10px 15px 10px 15px;
-  transition: .2s;
-}
+
+
 .main {
   display: flex;
 
@@ -73,7 +66,7 @@ flex-direction: row-reverse;
 p {
   width: 230px;
   padding-right: 10px;
-  margin-bottom: 10px;
+
 }
 .all {
   display:flex;
@@ -92,7 +85,7 @@ h5 {
 
 
 .img:hover {
-  transform: scale(1, 1.2);
+  transform: scale(1,1.5);
 }
 .topNav, .top {
   display: flex;
@@ -104,10 +97,15 @@ h5 {
   font-size: 20px;
 }
 
-.img {
+img {
+  width: 180px;
+  height: 480px;
   display: flex;
+  object-fit: cover;
   justify-content: space-around;
   margin-top: 20px;
+  transition: .2s;
+  padding: 10px 15px 10px 15px;
 }
 
 .img-group {
