--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,19 @@
   flex-grow: 2;
   font-weight: bold;
   font-size: 25px;
+
 }
-.topNav .red {
-  color: red;
-  font-size: 35px;
+.topNav a {
+  margin-right: 10px; 
 }
 
-.topNav .green {
-  color: #3baf1e;
-  font-size: 35px;
+.topNav a:last-child {
+  margin-right: 0; 
 }
-.topNav a:hover {
-  background-color: #3baf1e;
-  color: white;
-}
+
 .topNav, .top {
   display:flex;
-  
+
   justify-content: space-between;
   align-items: center;
   background-color: #cfcfcf;
@@ -59,9 +55,19 @@ body {
 
   text-align: left;
 }
-.home {
-  color: black;
 
+.home {
+    color: black;
+}
+
+.red {
+    color: red;
+    font-size: 35px;
+}
+
+.green {
+    color: #3baf1e;
+    font-size: 35px;
 }
 p {
   width: 230px;
@@ -113,13 +119,14 @@ img {
   position: relative;
 }
 
-.img-group img {
-  width: 280px;
-  height: 480px;
-  object-fit: cover;
-  display: block;
-  margin-bottom: 10px;
-  transition: .2s;
+.img-group img,
+.img:hover {
+    width: 380px;
+    height: 580px;
+    object-fit: cover;
+    display: block;
+    margin-bottom: 10px;
+    transition: .2s;
 }
 h3 {
   margin-bottom: 20px;
@@ -134,10 +141,8 @@ h4, h5 {
 }
 .caption {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
+  bottom: 0;
+  right: 0;
   padding: 10px;
   text-align: center;
 }
