--- a/row.css
+++ b/row.css
@@ -3,3 +3,13 @@ body {
     padding: 0;
     background-color: aquamarine;
 }
+.titlebox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.wrapper {
+    background-color: blue;
+    width: 400px;
+    padding: 15px;
+}
