--- a/styles.css
+++ b/styles.css
@@ -135,9 +135,10 @@ h4, h5 {
   margin: 0;
 }
 h4 {
-width: 50%;
-text-align: right;
+width: 75%;
 display: flex;
+text-align: end;
+
 
 }
 h5 {
@@ -147,7 +148,6 @@ width: auto;
   position: absolute;
   bottom: 0;
   right: 0;
-  padding: 100px 15px 112px 90px;
   text-align: right;
   display: inline-block;
 }
