--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1, h2 {
   font-size: 70px;
   padding: 0;
   margin-top: -20px;
-  font-family: 'Franklin Gothic Medium';
+ 
 }
 h2 {
   margin-top: -60px;
@@ -59,6 +59,7 @@ body {
 
 .home {
     color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .red {
