--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body {
 .home {
     color: black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-left: 40px;
 }
 
 .red {
